fix for metadata description cutoff on DPM (#1298)

--- a/client/src/components/_custom/drp/DataFilesProjectPublish/DataFilesProjectPublishWizardSteps/DataFilesProjectPublishWizard.module.scss
+++ b/client/src/components/_custom/drp/DataFilesProjectPublish/DataFilesProjectPublishWizardSteps/DataFilesProjectPublishWizard.module.scss
@@ -120,3 +120,7 @@
   border: 1px solid #ffdcd6;
   background-color: #fff3f0;
 }
+
+.description-show-more {
+  overflow: hidden auto;
+}
